--- a/cv/main.tex
+++ b/cv/main.tex
@@ -17,8 +17,7 @@
 \begin{aside}
 %
 \section{Contact}
-% (717) 585 0254
-(717) 386 0716
+(717) 906 8653
 ~
 www.tacoda.me
 ~
@@ -39,7 +38,7 @@ JavaScript, ES6, AJAX, jQuery, Elm, React, Vue
 % CoffeeScript, TypeScript, Redux, Webpack, ClojureScript
 \section{Back-end}
 ~
-\textbf{Clojure}
+% \textbf{Clojure}
 \textbf{Elixir}
 Lumen, Mix, OTP, Phoenix
 \textbf{JavaScript}
@@ -48,24 +47,28 @@ Npm, Node
 % Composer, Laravel
 % \textbf{Python}
 % Pip, Django
-\textbf{Python}
-Boto, Click, Pip
+% \textbf{Python}
+% Boto, Click, Pip
+% Java, C, C++, Haskell, Clojure, Python
+% Scala
 \textbf{Ruby}
 Bundler, Rails, RubyGems
 \textbf{Rust}
-Cargo, Helix, StructOpt, WASM Bindgen
+Cargo, Helix, StructOpt, WASM
 \section{DevOps}
 ~
 \textbf{Platforms}
 Amazon Web Services, Google Cloud Platform, Azure, Heroku, Linux
 \textbf{Services}
-MySQL, PostgreSQL, SQLite, Redis, Apache, Nginx, TravisCI
+MySQL, PostgreSQL, SQLite, Redis, Apache, Nginx, TravisCI, CircleCI
 % Cassandra, MariaDB, MongoDB, RabbitMQ, ElasticSearch, Jenkins
 \textbf{Standards}
 REST, GraphQL, OWASP Top Ten
 \textbf{Tools}
 Bash Scripting, Chef, Docker, Git, Make
 % Ansible, Kubernetes
+\textbf{Saas}
+Grafana, Jira, New Relic, Sentry, Splunk
 \end{aside}
 
 %----------------------------------------------------------------------------------------
