--- a/cv/main.tex
+++ b/cv/main.tex
@@ -19,7 +19,7 @@
 \section{Contact}
 (717) 906 8653
 ~
-www.tacoda.me
+tacoda.github.io
 ~
 github.com/tacoda
 ~
@@ -68,7 +68,7 @@ REST, GraphQL, OWASP Top Ten
 Bash Scripting, Chef, Docker, Git, Make
 % Ansible, Kubernetes
 \textbf{Saas}
-Grafana, Jira, New Relic, Sentry, Splunk
+Grafana, Jira, NewRelic, Sentry, Splunk
 \end{aside}
 
 %----------------------------------------------------------------------------------------
