Update CV and add travis config

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -60,7 +60,7 @@ Cargo, Helix, StructOpt, WASM
 \textbf{Platforms}
 Amazon Web Services, Google Cloud Platform, Azure, Heroku, Linux
 \textbf{Services}
-MySQL, PostgreSQL, SQLite, Redis, Apache, Nginx, TravisCI, CircleCI
+MySQL, PostgreSQL, SQLite, Redis, Apache, Nginx, Travis CI
 % Cassandra, MariaDB, MongoDB, RabbitMQ, ElasticSearch, Jenkins
 \textbf{Standards}
 REST, GraphQL, OWASP Top Ten
